gtkD/wrap/cHeaders/GL/gl.d


//C     GLAPI void GLAPIENTRY glGetHistogramParameteriv( GLenum target, GLenum pname,
//C     						 GLint *params );
void  glGetHistogramParameteriv(GLenum target, GLenum pname, GLint *params);

//C     GLAPI void GLAPIENTRY glMinmax( GLenum target, GLenum internalformat,
//C     				GLboolean sink );
void  glMinmax(GLenum target, GLenum internalformat, GLboolean sink);

//C     GLAPI void GLAPIENTRY glResetMinmax( GLenum target );
void  glResetMinmax(GLenum target);

//C     GLAPI void GLAPIENTRY glGetMinmax( GLenum target, GLboolean reset,
//C                                        GLenum format, GLenum types,
//C                                        GLvoid *values );
void  glGetMinmax(GLenum target, GLboolean reset, GLenum format, GLenum types, GLvoid *values);

//C     GLAPI void GLAPIENTRY glGetMinmaxParameterfv( GLenum target, GLenum pname,
//C     					      GLfloat *params );
void  glGetMinmaxParameterfv(GLenum target, GLenum pname, GLfloat *params);

//C     GLAPI void GLAPIENTRY glGetMinmaxParameteriv( GLenum target, GLenum pname,
//C     					      GLint *params );
void  glGetMinmaxParameteriv(GLenum target, GLenum pname, GLint *params);

//C     GLAPI void GLAPIENTRY glConvolutionFilter1D( GLenum target,
//C     	GLenum internalformat, GLsizei width, GLenum format, GLenum type,
//C     	const GLvoid *image );
void  glConvolutionFilter1D(GLenum target, GLenum internalformat, GLsizei width, GLenum format, GLenum type, GLvoid *image);

//C     GLAPI void GLAPIENTRY glConvolutionFilter2D( GLenum target,
//C     	GLenum internalformat, GLsizei width, GLsizei height, GLenum format,
//C     	GLenum type, const GLvoid *image );
void  glConvolutionFilter2D(GLenum target, GLenum internalformat, GLsizei width, GLsizei height, GLenum format, GLenum type, GLvoid *image);

//C     GLAPI void GLAPIENTRY glConvolutionParameterf( GLenum target, GLenum pname,
//C     	GLfloat params );
void  glConvolutionParameterf(GLenum target, GLenum pname, GLfloat params);

//C     GLAPI void GLAPIENTRY glConvolutionParameterfv( GLenum target, GLenum pname,
//C     	const GLfloat *params );
void  glConvolutionParameterfv(GLenum target, GLenum pname, GLfloat *params);

//C     GLAPI void GLAPIENTRY glConvolutionParameteri( GLenum target, GLenum pname,
//C     	GLint params );
void  glConvolutionParameteri(GLenum target, GLenum pname, GLint params);

//C     GLAPI void GLAPIENTRY glConvolutionParameteriv( GLenum target, GLenum pname,
//C     	const GLint *params );
void  glConvolutionParameteriv(GLenum target, GLenum pname, GLint *params);

//C     GLAPI void GLAPIENTRY glCopyConvolutionFilter1D( GLenum target,
//C     	GLenum internalformat, GLint x, GLint y, GLsizei width );
void  glCopyConvolutionFilter1D(GLenum target, GLenum internalformat, GLint x, GLint y, GLsizei width);

//C     GLAPI void GLAPIENTRY glCopyConvolutionFilter2D( GLenum target,
//C     	GLenum internalformat, GLint x, GLint y, GLsizei width,
//C     	GLsizei height);
void  glCopyConvolutionFilter2D(GLenum target, GLenum internalformat, GLint x, GLint y, GLsizei width, GLsizei height);

//C     GLAPI void GLAPIENTRY glGetConvolutionFilter( GLenum target, GLenum format,
//C     	GLenum type, GLvoid *image );
void  glGetConvolutionFilter(GLenum target, GLenum format, GLenum type, GLvoid *image);

//C     GLAPI void GLAPIENTRY glGetConvolutionParameterfv( GLenum target, GLenum pname,
//C     	GLfloat *params );
void  glGetConvolutionParameterfv(GLenum target, GLenum pname, GLfloat *params);

//C     GLAPI void GLAPIENTRY glGetConvolutionParameteriv( GLenum target, GLenum pname,
//C     	GLint *params );
void  glGetConvolutionParameteriv(GLenum target, GLenum pname, GLint *params);

//C     GLAPI void GLAPIENTRY glSeparableFilter2D( GLenum target,
//C     	GLenum internalformat, GLsizei width, GLsizei height, GLenum format,
//C     	GLenum type, const GLvoid *row, const GLvoid *column );
void  glSeparableFilter2D(GLenum target, GLenum internalformat, GLsizei width, GLsizei height, GLenum format, GLenum type, GLvoid *row, GLvoid *column);

//C     GLAPI void GLAPIENTRY glGetSeparableFilter( GLenum target, GLenum format,
//C     	GLenum type, GLvoid *row, GLvoid *column, GLvoid *span );
void  glGetSeparableFilter(GLenum target, GLenum format, GLenum type, GLvoid *row, GLvoid *column, GLvoid *span);
